# improved-mha-planner

./: README.md
sbpl/: CMakeLists.txt  README.txt  manifest.xml  package.xml
sbpl/include/sbpl/: headers.h
sbpl/include/sbpl/discrete_space_information/: environment_mha.h  environment_navxythetalat_mha.h  environment_ppma.h  environment_robarm.h  environment_roboarm_mha.h
sbpl/include/sbpl/planners/: lazyARA.h  mha_planner.h
sbpl/matlab/mprim/: unicycle_10cm_no_multiplier.mprim  unicycle_2.5cm_no_multiplier.mprim
sbpl/src/discrete_space_information/: environment_navxythetalat_mha.cpp  environment_robarm.cpp  environment_robarm_mha.cpp
sbpl/src/planners/: lazyARA.cpp  mha_planner.cpp
sbpl/src/test/: main_pa_islands.cpp  roboarm_pa_islands.cpp
sbpl/src/utils/: heap.cpp
